# c-tic-tac-toe

./: CMakeLists.txt  readme.md
.github/workflows/: autoGrader.yml  valgrind.yml
inc/: Board.h  Player.h
src/: Board.cpp  Game.cpp  Player.cpp  Testing.cpp
